fix notification description alignment

--- a/src/scss/Notifications.scss
+++ b/src/scss/Notifications.scss
@@ -30,7 +30,9 @@
 }
 
 .notif-desc {
-    display: sticky;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 50%;
     overflow: auto;
 }
